kubernetes/Int/deployments/media/prowlarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: prowlarr
    namespace: media
spec:
    selector:
        app: prowlarr
    ports:
        - port: 9696
