kubernetes/Int/deployments/media/prowlarr/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: prowlarr
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:0iI+nFqB5dlBDFvLenArjz7WtX84A+GC,iv:aS03GlmH88nxBUCwpD/xaHXOGAFS75kIr2eJMf2r49c=,tag:vcvnPXdmCtTzdSpMiJo5Hw==,type:str]
          kind: Rule
          priority: 10
          middlewares:
            - name: forwardauth-authentik
              namespace: network
          services:
            - name: prowlarr
              port: 9696
        - match: ENC[AES256_GCM,data:Xr9Ok3GUaHxlN2qVC+0dJgf6zC4Uy0Jnbqt7y/vPPUweRn/Yoxdy5eHYtVh4LtLbJxydgorlQLoZjBvnncQFdRHQag==,iv:UrTgKK8ZCNXG4C4PHZfnKAnu7mWlu+NzZeF8CqwGcC8=,tag:EfPZ+fMw+xabI5tco+hD3A==,type:str]
          kind: Rule
          priority: 15
          services:
            - name: prowlarr
              port: 9696
        - match: ENC[AES256_GCM,data:j4Xi9KZ66T1u52zya1FnEpW2woByCKmGQZfQOw==,iv:XEEmm6m05Fd0eMWp4T9Uo3W6Wa+XvDhlD0pzA0kqpkE=,tag:t3S9Gj0QNUKX36wLg1VZtA==,type:str]
          kind: Rule
          services:
            - name: prowlarr
              port: 9696
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEalJjenlSMzZ0VWNpdmZC
[...]
            v5ZwEsot1POeyjfoFvG111+VhNfxXWLpAyVMVGtGufeDnHIqefXxyg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-08-23T15:39:13Z"
    mac: ENC[AES256_GCM,data:9IkjLvYCzNOz5CQwVH9ScpZBKedA5TAsvcr7AdkjZgopzEaXjaf02B25W9hrvnfR90sJqoH4D77KPlyBnPEjWwbKtrsahL7h19hSOQUyGy99N52aHM77N+U/G2u7cOCnnv5cT/JNOQhpONqQB9ClgRXH4LDDTLzHogtiv6wz8/E=,iv:OZgbpH/RQoenG3dYIlfCOfOWzDbvC4ZAlWUFq/D1tGs=,tag:LSUMG08OKcUZzHB6RZSlMQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
